testing spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ h1 {
 
 .typedTitle {
   text-align: center;
+  display: inline-flex;
   font-family: 'Bad Script', cursive;
 }
 
